@@ -31,7 +31,9 @@
     <sampling enabled="no">1-5</sampling>
   </callers>
 
-  <user-functions enabled="no" list="/home/bsc41/bsc41273/user-functions.dat">
+  <user-functions enabled="no"
+    list="/home/bsc41/bsc41273/user-functions.dat"
+    exclude-automatic-functions="no">
     <counters enabled="yes" />
   </user-functions>
 
