@@ -1,5 +1,7 @@
 \begin{verbatim}
-<user-functions enabled="no" list="/home/bsc41/bsc41273/user-functions.dat">
+<user-functions enabled="no"
+  list="/home/bsc41/bsc41273/user-functions.dat"
+  exclude-automatic-functions="no">
   <counters enabled="yes" />
 </user-functions>
 \end{verbatim}
