@@ -26,7 +26,7 @@
     <sampling enabled="no">1-5</sampling>
   </callers>
 
-  <user-functions enabled="no" list="/home/bsc41/bsc41273/user-functions.dat">
+  <user-functions enabled="no" list="/home/bsc41/bsc41273/user-functions.dat" exclude-automatic-functions="no">
     <counters enabled="yes" />
   </user-functions>
 
